--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ plugins {
     id 'idea'
     id "io.spring.dependency-management" version "1.0.10.RELEASE"
     // Build uber-jar
-    id 'com.github.johnrengelman.shadow' version '6.1.0'
+    id 'com.github.johnrengelman.shadow' version '6.1.0' apply false
 }
 
 idea {
@@ -25,37 +25,24 @@ idea {
 }
 
 allprojects {
+    group "otus-Java-2020-09-Biglov"
+
     repositories {
-        // Use jcenter for resolving dependencies.
-        // You can declare any Maven/Ivy/file repository here.
         mavenCentral()
     }
 
-    dependencies {
-        // This dependency is used by the application.
-        implementation 'com.google.guava:guava:29.0-jre'
-
-        // Use JUnit Jupiter API for testing.
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
-
-        // Use JUnit Jupiter Engine for testing.
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+    apply plugin: "io.spring.dependency-management"
+    dependencyManagement {
+        dependencies {
+            dependency("com.google.guava:guava:${Versions.guava}")
+        }
     }
 
-
-    configurations.all {
+     configurations.all {
         resolutionStrategy {
             failOnVersionConflict()
         }
-        resolutionStrategy {
-            force("javax.servlet:servlet-api:2.4")
-            force("commons-logging:commons-logging:1.1.1")
-            force("commons-lang:commons-lang:2.5")
-            force("org.codehaus.jackson:jackson-core-asl:1.8.8")
-            force("org.codehaus.jackson:jackson-mapper-asl:1.8.3")
-            force("org.codehaus.jettison:jettison:1.1")
         }
-    }
 
 }
 
