--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,4 @@
-/*
-  * in the user manual at https://docs.gradle.org/6.6.1/userguide/multi_project_builds.html
- */
 rootProject.name = 'otus-Java-2020-09-Biglov'
 include 'hw-gradle'
 include 'hw03-generics'
+include 'hw06_reflections'
