--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'otus-Java-2020-09-Biglov'
 include 'hw-gradle'
 include 'hw03-generics'
 include 'hw06_reflections'
+include 'hw12_ATM'
