--- a/hw16_serialization/build.gradle
+++ b/hw16_serialization/build.gradle
@@ -10,6 +10,10 @@ targetCompatibility = JavaVersion.VERSION_15
 dependencies {
     implementation 'com.google.code.gson:gson'
     implementation 'com.google.guava:guava'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params'
+    testImplementation 'org.assertj:assertj-core'
 }
 
 test {
