--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,12 @@ allprojects {
             dependency("org.postgresql:postgresql:${Versions.postgresql}")
             dependency("org.testcontainers:junit-jupiter:${Versions.testcontainers}")
             dependency("org.testcontainers:postgresql:${Versions.testcontainers}")
-
             dependency("io.netty:netty-all:${Versions.netty}")
+
+            dependency("org.webjars:sockjs-client:${Versions.sockjs}")
+            dependency("org.webjars:stomp-websocket:${Versions.stomp}")
+            dependency("org.webjars:bootstrap:${Versions.bootstrap}")
+
             dependency("com.google.code.findbugs:jsr305:${Versions.jsr305}")
         }
     }
